implementing logic to device seperation pc, tablet and cellphone

--- a/index.html
+++ b/index.html
@@ -14,23 +14,31 @@
         padding: 0;
         box-sizing: border-box;
         font-family: "Roboto", sans-serif;
+        touch-action: none; /* Prevent default touch behaviors */
+        -webkit-touch-callout: none; /* Prevent callouts */
+        -webkit-user-select: none; /* Prevent selection */
+        user-select: none;
       }
 
       body {
         margin: 0;
         overflow: hidden;
         background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%);
+        position: fixed; /* Prevent bounce on iOS */
+        width: 100%;
+        height: 100%;
       }
 
       canvas {
         display: block;
         filter: drop-shadow(0 0 20px rgba(0, 0, 0, 0.3));
+        touch-action: none;
       }
 
       .info-container {
         position: absolute;
-        top: 20px;
-        left: 20px;
+        top: min(20px, 5vh);
+        left: min(20px, 5vw);
         display: flex;
         flex-direction: column;
         gap: 5px;
@@ -40,52 +48,38 @@
       .info {
         position: relative;
         color: #e2e8f0;
-        font-size: 1.1rem;
+        font-size: clamp(0.8rem, 2.5vw, 1.1rem);
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         background: rgba(0, 0, 0, 0.4);
-        padding: 10px 15px;
+        padding: clamp(5px, 2vw, 10px) clamp(8px, 3vw, 15px);
         border-radius: 8px;
         backdrop-filter: blur(5px);
       }
 
       .hearts {
         position: absolute;
-        top: 20px;
-        right: 20px;
+        top: min(20px, 5vh);
+        right: min(20px, 5vw);
         z-index: 10;
         display: flex;
-        gap: 12px;
+        gap: clamp(6px, 2vw, 12px);
         background: rgba(0, 0, 0, 0.4);
-        padding: 10px 15px;
+        padding: clamp(5px, 2vw, 10px) clamp(8px, 3vw, 15px);
         border-radius: 8px;
         backdrop-filter: blur(5px);
       }
 
       .heart {
-        width: 40px;
-        height: 40px;
+        width: clamp(20px, 6vw, 40px);
+        height: clamp(20px, 6vw, 40px);
         filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.5));
         transition: transform 0.3s ease;
       }
 
-      .heart:hover {
-        transform: scale(1.1);
-      }
-
-      .heart-full {
-        fill: #ff4d6d;
-        filter: drop-shadow(0 0 3px rgba(255, 77, 109, 0.6));
-      }
-
-      .heart-broken {
-        fill: #4a5568;
-        filter: drop-shadow(0 0 3px rgba(74, 85, 104, 0.6));
-      }
-
       .game-button {
         position: absolute;
-        padding: 12px 24px;
-        font-size: 1.1rem;
+        padding: clamp(8px, 2.5vw, 12px) clamp(16px, 5vw, 24px);
+        font-size: clamp(0.9rem, 2.5vw, 1.1rem);
         font-weight: 500;
         color: #fff;
         background: linear-gradient(135deg, #4a90e2 0%, #357abd 100%);
@@ -96,30 +90,61 @@
         text-transform: uppercase;
         letter-spacing: 1px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        -webkit-tap-highlight-color: transparent;
       }
 
-      .game-button:hover {
-        transform: translateY(-2px);
-        box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
-        background: linear-gradient(135deg, #357abd 0%, #2868a9 100%);
+      @media (hover: hover) {
+        .game-button:hover {
+          transform: translateY(-2px);
+          box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
+          background: linear-gradient(135deg, #357abd 0%, #2868a9 100%);
+        }
       }
 
-      .permission-button {
+      .game-button:active {
+        transform: translateY(1px);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      }
+
+      .control-buttons {
+        position: fixed;
+        bottom: min(20px, 5vh);
+        left: 0;
+        right: 0;
+        display: flex;
+        justify-content: space-between;
+        padding: 0 min(20px, 5vw);
+        gap: 10px;
+        z-index: 10;
+      }
+
+      /* Virtual joystick container */
+      #joystickContainer {
+        position: fixed;
+        bottom: 100px;
+        left: 50px;
+        width: 120px;
+        height: 120px;
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 50%;
+        display: none;
+        touch-action: none;
+        z-index: 100;
+      }
+
+      #joystickKnob {
+        position: absolute;
+        width: 40px;
+        height: 40px;
+        background: rgba(255, 255, 255, 0.8);
+        border-radius: 50%;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        touch-action: none;
       }
 
-      .pause-button {
-        bottom: 20px;
-        right: 20px;
-      }
-
-      .shoot-button {
-        bottom: 20px;
-        left: 20px;
-      }
-
+      /* Responsive overlay */
       .overlay {
         position: fixed;
         top: 0;
@@ -139,6 +164,7 @@
         opacity: 0;
         visibility: hidden;
         transition: all 0.3s ease;
+        padding: 20px;
       }
 
       .overlay.active {
@@ -147,95 +173,72 @@
       }
 
       .overlay h1 {
-        font-size: 3.5rem;
+        font-size: clamp(2rem, 6vw, 3.5rem);
         font-weight: 700;
         color: #fff;
-        margin-bottom: 1.5rem;
+        margin-bottom: clamp(1rem, 3vw, 1.5rem);
         text-transform: uppercase;
         letter-spacing: 2px;
         text-shadow: 0 0 20px rgba(74, 144, 226, 0.5);
+        text-align: center;
       }
 
       .overlay p {
-        font-size: 1.2rem;
+        font-size: clamp(1rem, 3vw, 1.2rem);
         color: #e2e8f0;
-        margin-bottom: 2rem;
+        margin-bottom: clamp(1.5rem, 4vw, 2rem);
         text-align: center;
         line-height: 1.6;
-        max-width: 600px;
-        padding: 0 20px;
+        max-width: min(600px, 90vw);
+        padding: 0 clamp(10px, 3vw, 20px);
       }
 
       .overlay button {
-        padding: 15px 40px;
-        font-size: 1.2rem;
-        font-weight: 500;
-        color: #fff;
-        background: linear-gradient(135deg, #4a90e2 0%, #357abd 100%);
-        border: none;
-        border-radius: 8px;
-        cursor: pointer;
-        transition: all 0.3s ease;
-        text-transform: uppercase;
-        letter-spacing: 1px;
-        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+        padding: clamp(12px, 3vw, 15px) clamp(30px, 8vw, 40px);
+        font-size: clamp(1rem, 3vw, 1.2rem);
       }
 
-      .overlay button:hover {
-        transform: translateY(-2px) scale(1.05);
-        box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
-        background: linear-gradient(135deg, #357abd 0%, #2868a9 100%);
-      }
-
-      .score {
-        font-size: 2.5rem;
-        color: #4a90e2;
-        margin-bottom: 1.5rem;
-        text-shadow: 0 0 10px rgba(74, 144, 226, 0.5);
-      }
-
-      .controls-info {
-        background: rgba(255, 255, 255, 0.1);
-        padding: 1.5rem;
-        border-radius: 12px;
-        margin: 1.5rem 0;
-        max-width: 400px;
-        backdrop-filter: blur(5px);
-      }
-
-      .controls-info h2 {
-        margin-top: 0;
-        color: #4a90e2;
-        font-size: 1.3rem;
-        margin-bottom: 1rem;
-      }
-
-      @keyframes pulse {
-        0% {
-          transform: scale(1);
+      /* Device-specific styles */
+      @media (max-width: 768px) {
+        .control-buttons {
+          bottom: min(10px, 3vh);
         }
-        50% {
-          transform: scale(1.1);
-        }
-        100% {
-          transform: scale(1);
+
+        .game-button {
+          min-width: 80px;
+          min-height: 44px; /* Minimum touch target size */
         }
       }
 
-      @keyframes float {
-        0% {
-          transform: translateY(0);
-        }
-        50% {
-          transform: translateY(-10px);
-        }
-        100% {
-          transform: translateY(0);
+      @media (min-width: 769px) and (max-width: 1024px) {
+        .control-buttons {
+          bottom: min(15px, 4vh);
         }
       }
 
-      .powerup {
-        animation: float 2s ease-in-out infinite;
+      /* Hide mobile controls on desktop */
+      @media (min-width: 1025px) {
+        #joystickContainer,
+        .mobile-only {
+          display: none !important;
+        }
+      }
+
+      /* Landscape orientation adjustments */
+      @media (max-height: 500px) and (orientation: landscape) {
+        .hearts {
+          top: 10px;
+          right: 10px;
+        }
+
+        .info-container {
+          top: 10px;
+          left: 10px;
+        }
+
+        .control-buttons {
+          bottom: 10px;
+        }
       }
     </style>
   </head>
@@ -343,6 +346,18 @@
         Math.random() * (powerupSpawnInterval.max - powerupSpawnInterval.min) +
         powerupSpawnInterval.min;
 
+      const isMobile =
+        /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(
+          navigator.userAgent
+        );
+      const isTablet =
+        /iPad|Android/.test(navigator.userAgent) &&
+        !/Mobile/.test(navigator.userAgent);
+
+      let lastTime = 0;
+      const targetFPS = 60;
+      const frameInterval = 1000 / targetFPS;
+
       function handleMouseMove(event) {
         const x = (event.clientX / window.innerWidth) * 180 - 90;
         const y = (event.clientY / window.innerHeight) * 180 - 90;
@@ -415,7 +430,9 @@
       }
 
       function initializeControls() {
-        if (window.DeviceOrientationEvent) {
+        if (isMobile || isTablet) {
+          setupMobileControls();
+        } else if (window.DeviceOrientationEvent) {
           if (typeof DeviceOrientationEvent.requestPermission === "function") {
             permissionButton.style.display = "block";
             permissionButton.addEventListener("click", (event) => {
@@ -440,6 +457,65 @@
         } else {
           fallbackToMouse();
         }
+      }
+
+      function setupMobileControls() {
+        // Show virtual joystick for mobile/tablet
+        const joystickContainer = document.getElementById("joystickContainer");
+        joystickContainer.style.display = "block";
+
+        // Touch handling for joystick
+        let joystickActive = false;
+        let joystickOrigin = { x: 0, y: 0 };
+
+        joystickContainer.addEventListener("touchstart", (e) => {
+          joystickActive = true;
+          const touch = e.touches[0];
+          joystickOrigin.x = touch.clientX;
+          joystickOrigin.y = touch.clientY;
+          e.preventDefault();
+        });
+
+        joystickContainer.addEventListener("touchmove", (e) => {
+          if (!joystickActive) return;
+
+          const touch = e.touches[0];
+          const dx = touch.clientX - joystickOrigin.x;
+          const dy = touch.clientY - joystickOrigin.y;
+
+          // Update tilt values based on joystick position
+          tiltX = dx / 50; // Adjust sensitivity
+          tiltY = dy / 50;
+
+          // Limit joystick movement
+          const maxDistance = 40;
+          const distance = Math.sqrt(dx * dx + dy * dy);
+          const angle = Math.atan2(dy, dx);
+
+          const knob = document.getElementById("joystickKnob");
+          if (distance > maxDistance) {
+            knob.style.left = `${Math.cos(angle) * maxDistance + 60}px`;
+            knob.style.top = `${Math.sin(angle) * maxDistance + 60}px`;
+          } else {
+            knob.style.left = `${touch.clientX - joystickOrigin.x + 60}px`;
+            knob.style.top = `${touch.clientY - joystickOrigin.y + 60}px`;
+          }
+
+          e.preventDefault();
+        });
+
+        joystickContainer.addEventListener("touchend", () => {
+          joystickActive = false;
+          tiltX = 0;
+          tiltY = 0;
+          const knob = document.getElementById("joystickKnob");
+          knob.style.left = "60px";
+          knob.style.top = "60px";
+        });
+
+        // Show mobile-specific buttons
+        shootButton.style.display = "block";
+        pauseButton.style.display = "block";
       }
 
       function isTouchDevice() {
@@ -889,21 +965,27 @@
         ctx.clearRect(0, 0, canvas.width, canvas.height);
       }
 
-      function gameLoop() {
-        if (!paused && gameStarted && controlMode != "none") {
-          ctx.clearRect(0, 0, canvas.width, canvas.height);
+      function gameLoop(timestamp) {
+        if (!lastTime) lastTime = timestamp;
+        const elapsed = timestamp - lastTime;
 
-          drawPlayer();
-          updatePlayer();
-          drawZombies();
-          updateZombies();
-          drawBullets();
-          updateBullets();
+        if (elapsed > frameInterval) {
+          if (!paused && gameStarted && controlMode != "none") {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-          powerups.forEach(drawHeartPowerup);
-          updatePowerups();
+            // Your existing game update code
+            drawPlayer();
+            updatePlayer();
+            drawZombies();
+            updateZombies();
+            drawBullets();
+            updateBullets();
+            powerups.forEach(drawHeartPowerup);
+            updatePowerups();
+            checkCollisions();
 
-          checkCollisions();
+            lastTime = timestamp;
+          }
         }
 
         requestAnimationFrame(gameLoop);
@@ -957,6 +1039,36 @@
         if (controlMode === "mouse" && event.key === "Escape") {
           togglePause();
         }
+      });
+
+      // Add touch event handling for shooting
+      canvas.addEventListener("touchstart", (e) => {
+        if (gameStarted && !paused) {
+          shootBullets();
+        }
+        e.preventDefault();
+      });
+
+      // Prevent default touch behaviors
+      document.addEventListener(
+        "touchmove",
+        (e) => {
+          e.preventDefault();
+        },
+        { passive: false }
+      );
+
+      // Handle orientation changes
+      window.addEventListener("orientationchange", () => {
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+        resetGame();
+      });
+
+      // Handle window resizing
+      window.addEventListener("resize", () => {
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
       });
 
       setInterval(() => {
